<resources>
    <string name="app_name">MyNotesApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="send_text">Send Text</string>
    <string name="send_email">Send Email</string>
    <string name="note_field">Make your note here!</string>
    <string name="Recipients_email">Recipients Email</string>
    <string name="Recipients_Text">Recipient #</string>
    <string name="CC_email">CC Email</string>
    <string name="BCC_email">BCC Email</string>
    <string name="Subject_email">Email Subject</string>
    <string name = "Message" >Message</string>
    <string name="PhoneNumberHint">Enter phone number.</string>
    <string name="SMSHint">Enter Message.</string>
    <string name="smsPerms">Set sms permission to allow in app settings.</string>
    <string name="welcome">Welcome to MyNotesApp!</string>
    <string name="email_header">Email Fields </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rating_bar_prompt">Please rate our app!</string>
</resources>
