<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:textSize="14sp"
        android:text="@string/smsPerms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />
    
    <EditText
        android:id="@+id/editTextTextSendMessage3"
        android:layout_width="304dp"
        android:layout_height="160dp"
        android:layout_marginStart="53dp"
        android:layout_marginBottom="220dp"
        android:hint="@string/SMSHint"
        android:textColorHint="#757575"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textLongMessage|textMultiLine"
        android:labelFor="@id/editTextTextEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="152dp"
        android:text="@string/Recipients_Text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="40dp"
        android:onClick="onSendText"
        android:clickable="true"
        android:text="@string/send_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true"/>
    <!-- send text goes above -->
    <Button
        android:id="@+id/button_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />


    <EditText
        android:id="@+id/editTextRecipient"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:hint="Enter phone number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:hint="@string/PhoneNumberHint" />
</androidx.constraintlayout.widget.ConstraintLayout>
